# Wagstaff-Lab

./: .gitignore  Makefile  PROJECT_STATUS.json  README.md  project_context.focus_analyzer.txt  project_context.txt  pyproject.toml  setup.sh  snaptxt
apps/: __init__.py
apps/cli/: cli_common.py  doctor.py  explorer.py  guide.py  i18n.py  main.py  mgmt_parser.py  registry.py  wiki.py
conf/: i18n_tags.json  i18n_ui.json  snapshot_templates.json  version.json
core/: __init__.py  analyzer.py  catalog.py  catalog_v2.py  craft_recipes.py  engine.py  i18n_index.py  resource_index.py  tagging.py  utils.py  version.py
devtools/: __init__.py  build_behavior_graph.py  build_cache.py  build_catalog.py  build_catalog_index.py  build_catalog_sqlite.py  build_catalog_v2.py  build_farming_defs.py  build_farming_fixed.py  build_i18n_index.py  build_icons.py  build_index_manifest.py  build_mechanism_index.py  build_resource_index.py  build_worldgen_index.py  catalog_quality.py  codemap.py  diff_mechanism_index.py  farming_sim.py  installer.py  pm.py  portal_hub.py  quality_gate.py  raw_scan.py  report_hub.py  report_utils.py  reporter.py  sampler.py  serve_webcraft.py  snapshot.py  snapshot_gui.py  static_mechanics_coverage.py  stats_gap_inspect.py  validate_mechanism_index.py  validators.py  worldgen_topology.py
docs/: CATALOG_V2_SPEC.md  DEV_GUIDE.md  README.md  ROADMAP.md  WEBCRAFT_NETWORK_STACK.md
src/: analyzer.py  catalog.py  craft_recipes.py  doctor.py  engine.py  explorer.py  guide.py  klei_atlas_tex.py  registry.py  utils.py  wiki.py
tests/: test_recipes.py
(+154 files in other folders)
